@@ -4,8 +4,8 @@ Authors@R: c(person(c("Steven", "E."), "Pav",
     role=c("aut","cre"),
     email="shabbychef@gmail.com",
     comment = c(ORCID = "0000-0002-4197-6195")))
-Version: 0.1.3.250
-Date: 2025-04-30
+Version: 0.1.3.300
+Date: 2025-05-01
 License: LGPL-3
 Title: Modeling of Ordinal Random Variables via Softmax Regression
 BugReports: https://github.com/shabbychef/ohenery/issues
@@ -46,3 +46,4 @@ Collate:
     'regularization.r'
     'rsm.r'
     'utils.r'
+RoxygenNote: 7.3.2
