@@ -18,6 +18,7 @@ export(harsm_invlink)
 export(harsmfit)
 export(harsmlik)
 export(hensm)
+export(hensmfit)
 export(hensmlik)
 export(inv_smax)
 export(normalize)
