@@ -1,19 +1,21 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/harsm.r
-\name{harsmfit}
-\alias{harsmfit}
-\title{Experts only softmax regression under Harville model.}
+% Please edit documentation in R/hensm.r
+\name{hensmfit}
+\alias{hensmfit}
+\title{Experts only softmax regression under Henery model.}
 \usage{
-harsmfit(
+hensmfit(
   y,
   g,
   X,
   wt = NULL,
   eta0 = NULL,
   beta0 = NULL,
+  gamma0 = NULL,
   normalize_wt = FALSE,
+  ngamma = 4,
   reg_wt = NULL,
-  reg_zero = 0,
+  reg_zero = NULL,
   reg_power = NULL,
   reg_coef_idx = NULL,
   reg_standardize = FALSE,
@@ -47,6 +49,12 @@ Must be the same length as \code{y}.}
 Must be the same length as number of columns in \code{X}.
 Should only affect the speed of the computation, not the results.
 Defaults to all zeroes.}
+
+\item{gamma0}{an optional vector of the initial estimate of beta for
+\sQuote{warm start} of the estimation procedure.
+Must be of length \code{ngamma - 1}.
+Should only affect the speed of the computation, not the results.
+Defaults to all ones.}
 
 \item{normalize_wt}{if \code{TRUE}, we renormalize \code{wt}, if given,
 to have mean value 1. Note that the default value has changed
@@ -102,10 +110,10 @@ Only terms associated with the betas are so normalized.}
  }
 }
 \value{
-An object of class \code{harsm}, \code{maxLik}, and \code{linodds}.
+An object of class \code{hensm}, \code{maxLik}, and \code{linodds}.
 }
 \description{
-An \dQuote{experts only} softmax fitting function for the Harville
+An \dQuote{experts only} softmax fitting function for the Henery 
 model.
 }
 \details{
@@ -119,28 +127,9 @@ then conditional on these fixed odds.
 
 Weighted estimation is supported.
 
-The code relies on the likelihood function of \code{\link{harsmlik}},
+The code relies on the likelihood function of \code{\link{hensmlik}},
 and MLE code from \code{\link[maxLik]{maxLik}}.
 }
-\note{
-The fit functions return an object of type \code{\link[maxLik]{maxLik}}
-even when regularization penalties are applied; the statistical inference
-functions are not valid when regularization is used. The user is warned.
-}
-\section{Regularization}{
-The regularization term is of the form
-\deqn{\sum_i w_i |\nu_{c_i} - z_i|^{p_i},}
-where \eqn{w_i} are the \code{reg_wt} weights,
-\eqn{z_i} are the \code{reg_zero} zeroes,
-\eqn{p_i} are the \code{reg_power} powers,
-and \eqn{c_i} are the \code{reg_coef_idx} coefficient indices.
-Note that the coefficient indices can be repeated so that the
-regularization term can include multiple contributions from one
-coefficient element. This allows \sQuote{elasticnet} regularization.
-The \eqn{\nu} here refer to the regression coefficients \eqn{\beta}
-concatenated with the \eqn{\gamma} coefficients in the Henery model.
-}
-
 \examples{
 nfeat <- 5
 set.seed(1234)
@@ -150,20 +139,15 @@ beta <- rnorm(nfeat)
 eta <- X \%*\% beta
 y <- rsm(eta,g)
      
-mod0 <- harsmfit(y=y,g=g,X=X)
+mod0 <- hensmfit(y=y,g=g,X=X,ngamma=3)
 summary(mod0)
 # now upweight finishers 1-5
-modw <- harsmfit(y=y,g=g,X=X,wt=1 + as.numeric(y < 6))
+modw <- hensmfit(y=y,g=g,X=X,wt=1 + as.numeric(y < 6),ngamma=2)
 summary(modw)
 }
-\references{
-Harville, D. A. "Assigning probabilities to the outcomes of multi-entry competitions." 
-Journal of the American Statistical Association 68, no. 342 (1973): 312-316.
-\doi{10.1080/01621459.1973.10482425}
-}
 \seealso{
-the friendly interface \code{harsm}, 
-the likelihood function, \code{\link{harsmlik}}, 
+the friendly interface \code{hensm}, 
+the likelihood function, \code{\link{hensmlik}},
 and the expected rank function (the inverse link), \code{\link{erank}}.
 }
 \author{
